<resources>
    <string name="app_name">LABracadabra</string>
    <string name="title_activity_vegetables">Let\'s Learn About Vegetables!</string>
    <string name="large_text">
        "When you think of fruit, you probably think of something sweet and juicy to eat. Apples, "
        "berries and oranges are all fruit. But scientists think of fruit as a part of a plant that "
        "contains seeds. The fruit might not be sweet. In fact, it might not be edible at all. But "
        "it’s still a fruit.\n\n"

        "Fruit is usually soft and juicy, but not always. Sometimes it’s covered by a hard, "
        "protective shell. Think about a watermelon, for instance. It is soft and juicy on the "
        "inside, but the outside is tough. Walnuts and other nuts are technically a fruit even "
        "though they are very hard.\n\n"

        "Think of all the fruits and vegetables you eat. Are any of the vegetables you eat really "
        "fruit? How about tomatoes, peppers or green beans? They all have seeds and are all fruit. "
        "Pumpkins, squash, and cucumbers are also fruit.\n\n"

        "Vegetables are edible plant parts that don’t contain seeds. Lettuce, carrots and celery "
        "don’t contain seeds – at least not the parts that we eat. These plants will flower and "
        "produce seed, but we usually eat them before they do so.\n\n"

        "Raspberries and blackberries are called aggregate fruit. They are made up of hundreds of"
        "little fruits. Each one contains a seed.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fruit">Let\'s learn about fruits!</string>
    <string name="title_activity_protein">ProteinActivity</string>
    <string name="title_activity_carbs">CarbsActivity</string>
    <string name="title_activity_dairy">DairyActivity</string>
    <string name="title_activity_fats">FatsActivity</string>
    <string name="title_activity_vitamins">VitaminsActivity</string>
    <string name="title_activity_fiber">FiberActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="labracadabra">LABracadabra</string>
    <string name="todo">TODO</string>
    <string name="where_are_you_located">What is your\n location?</string>
    <string name="title_activity_magician">MagicianActivity</string>
    <string name="choose_your_magician">Choose your \n Magician!</string>
    <string name="magician_three">Magician Three</string>
    <string name="magician_two">Magician Two</string>
    <string name="magician_one">Magician one</string>
    <string name="doctor_s_office">Doctor\'s Office</string>
    <string name="automobile_shop">Automobile Shop</string>
    <string name="park">Park</string>
    <string name="library">Library</string>
    <string name="hardware_store">Hardware Store</string>
    <string name="grocery_store">Grocery Store</string>
    <string name="which_is_not_like_the_other">Which is not like the other?</string>
    <string name="next">NEXT</string>
    <string name="why_do_my_parents_always_tell_me_to_eat_my_fruits_and_veggies">Why do my parents always tell me to eat my fruits and Veggies?!?!</string>
    <string name="because_they_re_packed_with_vitamins">Because they\'re packed with vitamins!!</string>
    <string name="fat_soluble_vitamins">Fat soluble vitamins:</string>
    <string name="next2">next</string>
    <string name="where_are_you_located_in_the_store">Where are you located in the store?</string>
    <string name="produce">Produce</string>
    <string name="deli">Deli</string>
    <string name="best">Best:</string>
    <string name="dairy">Dairy</string>
    <string name="dry_goods">Dry Goods</string>
    <string name="bakery">Bakery</string>
    <string name="canned_goods">Canned Goods</string>
    <string name="vitamin_k_good_for_your_blood_eat_your_spinach_and_cabbage">Vitamin K (CLICK HERE): </string>
    <string name="_2x">2x</string>
    <string name="_1x">1x</string>
    <string name="_3x">3x</string>
    <string name="vitamin_a">Vitamin A (CLICK HERE):</string>
    <string name="vitamin_d_click_here">Vitamin D (CLICK HERE):</string>
    <string name="let_s_learn_about_vitamins">Let\'s learn about vitamins!</string>
    <string name="a_picture_of_milk">A picture of milk</string>
    <string name="a_picture_of_a_bone">A picture of a bone</string>
    <string name="picture_of_blood">Picture of blood</string>
    <string name="picture_of_spinach">picture of spinach</string>
    <string name="tap_the_food_that_will_make_your_muscles_bigger">Tap the food that will make your muscles bigger</string>
    <string name="arms">Arms</string>
    <string name="food_choice">food choice</string>


</resources>
