<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tblScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:ignore="ExtraText">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:fontFamily="@font/aclonica"
                android:text="@string/where_are_you_located"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="36sp" />
        </TableRow>

        <TableRow>
            android:layout_width="0dp"

            <Button
                android:id="@+id/groceries"

                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:background="@drawable/ic_fruit_icon_fruitsicon2"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/grocery_store"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_width="wrap_content">
            android:layout_width="0dp"

            <Button
                android:id="@+id/hardware"

                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:background="@drawable/ic_tools"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/hardware_store"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            android:layout_width="0dp"

            <Button
                android:id="@+id/library"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="270dp"
                android:layout_weight="1"
                android:background="@drawable/ic_bookshelf"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/library"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            android:layout_width="0dp"

            <Button
                android:id="@+id/park"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="270dp"
                android:layout_weight="1"
                android:background="@drawable/ic_park"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/park"
                android:textColor="@android:color/background_dark"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            android:layout_width="0dp"

            <Button
                android:id="@+id/auto"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="270dp"
                android:layout_weight="1"
                android:background="@drawable/ic_racing"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/automobile_shop"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            android:layout_width="0dp"

            <Button
                android:id="@+id/doctors"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="150dp"
                android:layout_height="270dp"
                android:layout_weight="1"
                android:background="@drawable/ic_doctor"
                android:fontFamily="@font/aclonica"
                android:onClick="onClick"
                android:text="@string/doctor_s_office"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</ScrollView>